--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href=" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
-                        <span>Paper</span>
+                        <span>Email Position Paper</span>
                       </a>
                     </span>
 
                     <!-- Supplementary PDF link -->
-                    <span class="link-block">
+                    <!-- <span class="link-block">
                       <a href="static/pdfs/supplementary_material.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
@@ -87,29 +87,7 @@
                       </span>
                       <span>Supplementary</span>
                     </a>
-                  </span>
-
-                  <!-- Github link -->
-                  <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fab fa-github"></i>
-                    </span>
-                    <span>Code</span>
-                  </a>
-                </span>
-
-                <!-- ArXiv abstract Link -->
-                <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
-                  class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                    <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv</span>
-                </a>
-              </span>
+                  </span> -->
             </div>
           </div>
         </div>
@@ -119,22 +97,6 @@
 </section>
 
 
-<!-- Teaser video-->
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
-        <source src="static/videos/banner_video.mp4"
-        type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
-      </h2>
-    </div>
-  </div>
-</section>
-<!-- End teaser video -->
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
@@ -144,7 +106,16 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
+            The second edition of our workshop continues the conversation on social drones, focusing on their potential contributions to health, 
+            well-being, sports, and play. In this edition, our aim is to broaden the discussion by inviting a diverse group of researchers to 
+            delve into one of the prominent challenges in human-drone interaction: the acceptance of social drones in personal spaces. 
+            By expanding the workshop’s research focus, we intend to attract researchers from all relevant fields to provide their perspectives 
+            on this specific challenge. To stimulate discourse on this topic, the application focus of the drones will be on enhancing experiences 
+            related to health, well-being, sports, and play. Through a call for position papers, our goal is to convene a cohort of relevant 
+            researchers to collectively contribute to drafting a roadmap that identifies pertinent research avenues while considering various 
+            perspectives related to the use case. Ultimately, our objective is to address key challenges, establish research avenues to support 
+            a paradigm shift, and foster connections with researchers to promote the development of drones that enhance meaningful experiences, 
+            thus advancing the understanding and adoption of social drones in personal spaces. <a href="https://kivanctatar.com/Social-Drones-Workshop-Nordic-CHI-2022">Link to first edition of the workshop</a>
           </p>
         </div>
       </div>
