--- a/index.html
+++ b/index.html
@@ -127,40 +127,41 @@
 
 <!-- Image carousel -->
 <section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          First image description.
-        </h2>
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Topics</h2>
+        <div class="content has-text-justified">
+          <p>
+            The topics of the workshop include, but are not limited to: <br>
+            Interaction design <br> 
+            Sports and play HCI <br>
+            Health and well-being HCI <br>
+            Ethics <br>
+            Navigation and control <br>
+            Perception systems
+            Electronics and systems engineering <br>
+            User-Centered methods for drone interaction <br>
+            Designing drones acting as social entities <br>
+            Personalized drones <br>
+            Drone social behaviors <br>
+            Real-time adaptive solutions <br>
+            Studies of Human-Drone Interaction, with quantitative/qualitative approach <br>
+            Human-centred data acquisition methods <br>
+            Data-driven models <br>
+            Experimental methods <br>
+            Specific applications of drones <br>
+            Experience design <br>
+            Human factors <br>
+            Design methods <br>
+            Health and wellbeing application <br>
+            Machine learning and artificial intelligence algorithms <br>
+            </a>
+          </p>
+        </div>
       </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Second image description.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-         Third image description.
-       </h2>
-     </div>
-     <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Fourth image description.
-      </h2>
     </div>
   </div>
-</div>
-</div>
 </section>
 <!-- End image carousel -->
 
@@ -172,7 +173,7 @@
   <div class="hero-body">
     <div class="container">
       <!-- Paper video. -->
-      <h2 class="title is-3">Video Presentation</h2>
+      <h2 class="title is-3">Important Dates</h2>
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           
