--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             researchers to collectively contribute to drafting a roadmap that identifies pertinent research avenues while considering various 
             perspectives related to the use case. Ultimately, our objective is to address key challenges, establish research avenues to support 
             a paradigm shift, and foster connections with researchers to promote the development of drones that enhance meaningful experiences, 
-            thus advancing the understanding and adoption of social drones in personal spaces. <a href="https://kivanctatar.com/Social-Drones-Workshop-Nordic-CHI-2022">Link to first edition of the workshop</a>
+            thus advancing the understanding and adoption of social drones in personal spaces. <a style= "color: blue" href="https://kivanctatar.com/Social-Drones-Workshop-Nordic-CHI-2022">Link to first edition of the workshop</a>
           </p>
         </div>
       </div>
@@ -131,7 +131,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Topics</h2>
-        <div class="content has-text-justified">
+        <div style="justify-content: center;" class="content has-text-justified">
           <p>
             The topics of the workshop include, but are not limited to: <br>
             Interaction design <br> 
