--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             Personalized drones <br>
             Drone social behaviors <br>
             Real-time adaptive solutions <br>
-            Studies of Human-Drone Interaction, with quantitative/qualitative approach <br>
+            Quantitative/qualitative HDI studies <br>
             Human-centred data acquisition methods <br>
             Data-driven models <br>
             Experimental methods <br>
