--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Topics</h2>
-        <div style="justify-content: center;" class="content has-text-justified">
-          <p>
+        <div style="justify-content: center" class="content has-text-justified">
+          <p style="justify-content: center">
             The topics of the workshop include, but are not limited to: <br>
             Interaction design <br> 
             Sports and play HCI <br>
