--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Topics</h2>
         <div style="justify-content: center" class="content has-text-justified">
-          <p style="justify-content: center">
+          <p style="align-items: center">
             The topics of the workshop include, but are not limited to: <br>
             Interaction design <br> 
             Sports and play HCI <br>
