--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Topics</h2>
-        <div style="justify-content: center" class="content has-text-justified">
+        <div class="content has-text-justified">
           <p style="align-items: center">
             The topics of the workshop include, but are not limited to: <br>
             Interaction design <br> 
@@ -155,7 +155,7 @@
             Human factors <br>
             Design methods <br>
             Health and wellbeing application <br>
-            Machine learning and artificial intelligence algorithms <br>
+            Machine learning & AI algorithms <br>
             </a>
           </p>
         </div>
@@ -179,7 +179,11 @@
           
           <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <span>September 1st: Deadline for position paper submission <br>
+               <br>
+              September 2nd: Notification of acceptance <br>
+               <br>
+              September 7th: Camera ready paper submission</span>
           </div>
         </div>
       </div>
@@ -193,28 +197,13 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
+      <h2 class="title is-3">Paper format and submissions</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
-            <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4"
-            type="video/mp4">
-          </video>
+          Two-four pages position will be accepted. Paper should follow the standard single column ACM format, in accordance with the guidelines of the NordiCHI conference. For more information about the format, see the conference website: <a href="https://www.nordichi2024.se/" target="_blank">Nordic CHI 2024</a>
+          <br>
+          <br>
+          The publication of a post-workshop journal special issue will be investigated and announced during the workshop
         </div>
       </div>
     </div>
@@ -231,13 +220,14 @@
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title">Poster</h2>
-
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
-          </iframe>
-        
+      <h2 class="title is-3">Submission Instructions</h2>
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item item-video1">
+          Position papers must be submitted electronically in PDF format to ( mobaid [at] chalmers [dot] se ) by the deadline. In addition to the position paper’s content, the submission should include a section at the end that outlines the authors’ interest and motivation around the workshop’s topic.
+        </div>
       </div>
     </div>
+  </div>
   </section>
 <!--End paper poster -->
 
