--- a/index.html
+++ b/index.html
@@ -170,21 +170,16 @@
 
 <!-- Youtube video -->
 <section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <!-- Paper video. -->
-      <h2 class="title is-3">Important Dates</h2>
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          
-          <div class="publication-video">
-            <!-- Youtube embed code here -->
-            <span>September 1st: Deadline for position paper submission <br>
-               <br>
-              September 2nd: Notification of acceptance <br>
-               <br>
-              September 7th: Camera ready paper submission</span>
-          </div>
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Important Dates</h2>
+        <div class="content has-text-justified">
+          <span>September 1st: Deadline for position paper submission <br>
+            <br>
+           September 2nd: Notification of acceptance <br>
+            <br>
+           September 7th: Camera ready paper submission</span>
         </div>
       </div>
     </div>
