--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 
 <!-- Youtube video -->
-<section class="section hero is-light">
+<section class="hero is-small is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
