--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <div class="container">
       <h2 class="title is-3">Paper format and submissions</h2>
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
+        <div >
           Two-four pages position will be accepted. Paper should follow the standard single column ACM format, in accordance with the guidelines of the NordiCHI conference. For more information about the format, see the conference website: <a href="https://www.nordichi2024.se/" target="_blank">Nordic CHI 2024</a>
           <br>
           <br>
