--- a/index.html
+++ b/index.html
@@ -130,6 +130,27 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified">
+          <p>
+            The second edition of our workshop continues the conversation on social drones, focusing on their potential contributions to health, 
+            well-being, sports, and play. In this edition, our aim is to broaden the discussion by inviting a diverse group of researchers to 
+            delve into one of the prominent challenges in human-drone interaction: the acceptance of social drones in personal spaces. 
+            By expanding the workshop’s research focus, we intend to attract researchers from all relevant fields to provide their perspectives 
+            on this specific challenge. To stimulate discourse on this topic, the application focus of the drones will be on enhancing experiences 
+            related to health, well-being, sports, and play. Through a call for position papers, our goal is to convene a cohort of relevant 
+            researchers to collectively contribute to drafting a roadmap that identifies pertinent research avenues while considering various 
+            perspectives related to the use case. Ultimately, our objective is to address key challenges, establish research avenues to support 
+            a paradigm shift, and foster connections with researchers to promote the development of drones that enhance meaningful experiences, 
+            thus advancing the understanding and adoption of social drones in personal spaces. <a style= "color: blue" href="https://kivanctatar.com/Social-Drones-Workshop-Nordic-CHI-2022">Link to first edition of the workshop</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
         <h2 class="title is-3">Topics</h2>
         <div class="content has-text-justified">
           <p>
@@ -161,7 +182,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </section>
 <!-- End image carousel -->
 
@@ -171,6 +192,27 @@
 <!-- Youtube video -->
 <section class="hero is-small is-light">
   <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified">
+          <p>
+            The second edition of our workshop continues the conversation on social drones, focusing on their potential contributions to health, 
+            well-being, sports, and play. In this edition, our aim is to broaden the discussion by inviting a diverse group of researchers to 
+            delve into one of the prominent challenges in human-drone interaction: the acceptance of social drones in personal spaces. 
+            By expanding the workshop’s research focus, we intend to attract researchers from all relevant fields to provide their perspectives 
+            on this specific challenge. To stimulate discourse on this topic, the application focus of the drones will be on enhancing experiences 
+            related to health, well-being, sports, and play. Through a call for position papers, our goal is to convene a cohort of relevant 
+            researchers to collectively contribute to drafting a roadmap that identifies pertinent research avenues while considering various 
+            perspectives related to the use case. Ultimately, our objective is to address key challenges, establish research avenues to support 
+            a paradigm shift, and foster connections with researchers to promote the development of drones that enhance meaningful experiences, 
+            thus advancing the understanding and adoption of social drones in personal spaces. <a style= "color: blue" href="https://kivanctatar.com/Social-Drones-Workshop-Nordic-CHI-2022">Link to first edition of the workshop</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Important Dates</h2>
@@ -183,14 +225,35 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </section>
 <!-- End youtube video -->
 
 
 <!-- Video carousel -->
 <section class="hero is-small">
-  <div class="hero-body">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified">
+          <p>
+            The second edition of our workshop continues the conversation on social drones, focusing on their potential contributions to health, 
+            well-being, sports, and play. In this edition, our aim is to broaden the discussion by inviting a diverse group of researchers to 
+            delve into one of the prominent challenges in human-drone interaction: the acceptance of social drones in personal spaces. 
+            By expanding the workshop’s research focus, we intend to attract researchers from all relevant fields to provide their perspectives 
+            on this specific challenge. To stimulate discourse on this topic, the application focus of the drones will be on enhancing experiences 
+            related to health, well-being, sports, and play. Through a call for position papers, our goal is to convene a cohort of relevant 
+            researchers to collectively contribute to drafting a roadmap that identifies pertinent research avenues while considering various 
+            perspectives related to the use case. Ultimately, our objective is to address key challenges, establish research avenues to support 
+            a paradigm shift, and foster connections with researchers to promote the development of drones that enhance meaningful experiences, 
+            thus advancing the understanding and adoption of social drones in personal spaces. <a style= "color: blue" href="https://kivanctatar.com/Social-Drones-Workshop-Nordic-CHI-2022">Link to first edition of the workshop</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Paper format and submissions</h2>
       <div id="results-carousel" class="carousel results-carousel">
@@ -202,7 +265,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </section>
 <!-- End video carousel -->
 
@@ -213,7 +276,28 @@
 
 <!-- Paper poster -->
 <section class="hero is-small is-light">
-  <div class="hero-body">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified">
+          <p>
+            The second edition of our workshop continues the conversation on social drones, focusing on their potential contributions to health, 
+            well-being, sports, and play. In this edition, our aim is to broaden the discussion by inviting a diverse group of researchers to 
+            delve into one of the prominent challenges in human-drone interaction: the acceptance of social drones in personal spaces. 
+            By expanding the workshop’s research focus, we intend to attract researchers from all relevant fields to provide their perspectives 
+            on this specific challenge. To stimulate discourse on this topic, the application focus of the drones will be on enhancing experiences 
+            related to health, well-being, sports, and play. Through a call for position papers, our goal is to convene a cohort of relevant 
+            researchers to collectively contribute to drafting a roadmap that identifies pertinent research avenues while considering various 
+            perspectives related to the use case. Ultimately, our objective is to address key challenges, establish research avenues to support 
+            a paradigm shift, and foster connections with researchers to promote the development of drones that enhance meaningful experiences, 
+            thus advancing the understanding and adoption of social drones in personal spaces. <a style= "color: blue" href="https://kivanctatar.com/Social-Drones-Workshop-Nordic-CHI-2022">Link to first edition of the workshop</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Submission Instructions</h2>
       <div id="results-carousel" class="carousel results-carousel">
@@ -222,7 +306,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   </section>
 <!--End paper poster -->
 
