--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
 
 
 <!-- Image carousel -->
-<section class="hero is-small">
+<section class="section hero is-small">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
+        <h2 class="title is-3">Topics</h2>
         <div class="content has-text-justified">
           <p>
             The topics of the workshop include, but are not limited to: <br>
@@ -181,11 +181,11 @@
 
 
 <!-- Youtube video -->
-<section class="hero is-small is-light">
+<section class="section hero is-small is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
+        <h2 class="title is-3">Important Dates</h2>
         <div class="content has-text-justified">
           <span>September 1st: Deadline for position paper submission <br>
             <br>
@@ -211,11 +211,11 @@
 
 
 <!-- Video carousel -->
-<section class="hero is-small">
+<section class="section hero is-small">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
+        <h2 class="title is-3">Paper format and submissions</h2>
         <div class="content has-text-justified">
           <p>
             Two-four pages position will be accepted. Paper should follow the standard single column ACM format, in accordance with the guidelines of the NordiCHI conference. For more information about the format, see the conference website: <a href="https://www.nordichi2024.se/" target="_blank">Nordic CHI 2024</a>
@@ -246,11 +246,11 @@
 
 
 <!-- Paper poster -->
-<section class="hero is-small is-light">
+<section class="section hero is-small is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
+        <h2 class="title is-3">Submission Instructions</h2>
         <div class="content has-text-justified">
           <p>
             Position papers must be submitted electronically in PDF format to ( mobaid [at] chalmers [dot] se ) by the deadline. In addition to the position paper’s content, the submission should include a section at the end that outlines the authors’ interest and motivation around the workshop’s topic.
