--- a/index.html
+++ b/index.html
@@ -187,11 +187,9 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Important Dates</h2>
         <div class="content has-text-justified">
-          <span>September 1st: Deadline for position paper submission <br>
-            <br>
-           September 2nd: Notification of acceptance <br>
-            <br>
-           September 7th: Camera ready paper submission</span>
+          <p>September 1st: Deadline for position paper submission <br>
+             September 2nd: Notification of acceptance <br>
+             September 7th: Camera ready paper submission</p>
         </div>
       </div>
     </div>
