--- a/index.html
+++ b/index.html
@@ -187,10 +187,16 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Important Dates</h2>
         <div class="content has-text-justified">
+          <p>
+            Position papers must be submitted electronically in PDF format to ( mobaid [at] chalmers [dot] se ) by the deadline. In addition to the position paper’s content, the submission should include a section at the end that outlines the authors’ interest and motivation around the workshop’s topic.
+          </p>
+        </div>
+        <!-- <div class="content has-text-justified">
+          
           <p>September 1st: Deadline for position paper submission <br>
              September 2nd: Notification of acceptance <br>
              September 7th: Camera ready paper submission</p>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
