--- a/index.html
+++ b/index.html
@@ -188,7 +188,11 @@
         <h2 class="title is-3">Important Dates</h2>
         <div class="content has-text-justified">
           <p>
-            Position papers must be submitted electronically in PDF format to ( mobaid [at] chalmers [dot] se ) by the deadline. In addition to the position paper’s content, the submission should include a section at the end that outlines the authors’ interest and motivation around the workshop’s topic.
+            September 1st: Deadline for position paper submission.
+          </p>
+          <br>
+          <p>
+            September 1st: Deadline for position paper submission.
           </p>
         </div>
         <!-- <div class="content has-text-justified">
