--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <h2 class="title is-3">Important Dates</h2>
         <div class="content has-text-justified">
           <p>
-            September 1st: Deadline for position paper submission &nbsp; &nbsp; check one two three tfour five six seven
+            September 1st: Deadline for position paper submission &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
           </p>
           
         </div>
