--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Important Dates</h2>
-        <div class="content has-text-justified">
+        <div class="content has-text-centered">
           <p>
-            September 1st: Deadline for position paper submission &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            September 1st: Deadline for position paper submission
           </p>
           
         </div>
