--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Important Dates</h2>
-        <div style="white-space: nowrap;" class="content has-text-center">
+        <div style="white-space: nowrap;" class="content has-text-justified">
           <p>
             September 1st: Deadline for position paper submission check
           </p>
