--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <h2 class="title is-3">Important Dates</h2>
         <div style="white-space: nowrap;" class="content has-text-justified">
           <p>
-            September 1st: Deadline for position paper submission check
+            September 1st: Deadline for position paper submission
           </p>
           
         </div>
