--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Important Dates</h2>
-        <div style="white-space: nowrap; text-align: center;" class="content has-text-justified">
-          <p>
+        <div style="text-align: center;" class="content has-text-justified">
+          <p style="white-space: nowrap;">
             September 1st: Deadline for position paper submission
           </p>
           
