--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Important Dates</h2>
-        <div style="text-align: center;" class="content has-text-justified">
+        <div style="text-align: center;   display: flex; justify-content: center;" class="content has-text-justified">
           <p style="white-space: nowrap;">
             September 1st: Deadline for position paper submission
           </p>
