--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Topics</h2>
-        <div class="content has-text-justified">
-          <p>
+        <div style="text-align: center;   display: flex; justify-content: center;" class="content has-text-justified">
+          <p style="white-space: nowrap;">
             The topics of the workshop include, but are not limited to: <br>
             Interaction design <br> 
             Sports and play HCI <br>
@@ -188,7 +188,9 @@
         <h2 class="title is-3">Important Dates</h2>
         <div style="text-align: center;   display: flex; justify-content: center;" class="content has-text-justified">
           <p style="white-space: nowrap;">
-            September 1st: Deadline for position paper submission
+            September 1st: Deadline for position paper submission<br>
+             September 2nd: Notification of acceptance <br>
+             September 7th: Camera ready paper submission
           </p>
           
         </div>
