--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Template Download Links</h2>
-        <div style="text-align: center;   display: flex; justify-content: center;" class="content has-text-justified">
+        <div style="text-align: center;  display: flex; justify-content: center;" class="content has-text-justified">
           <p style="white-space: nowrap;">
-            <a style= "color: blue" href="authors.acm.org/proceedings/production-information/taps-production-workflow">Microsoft Word</a><br>
+            <a style= "color: blue; text-align: center" href="authors.acm.org/proceedings/production-information/taps-production-workflow">Microsoft Word</a><br>
             <br>
             <a style= "color: blue" href="www.acm.org/binaries/content/assets/publications/consolidated-tex-template/acmart-primary.zip">LaTeX</a>: Use sample-manuscript.tex inside the samples folder for submissions <br> 
             <br>
@@ -320,35 +320,31 @@
         <h2 class="title is-3">Organizers</h2>
         <div class="content has-text-justified">
           <p>
-            Aswin Balasubramaniam
-            <small>University of Twente, Netherlands</small> 
-            <small>a [dot] balasubramaniam [at] utwente [dot] nl</small>
+            Aswin Balasubramaniam <br>
+            <small>University of Twente, Netherlands</small> <br>
+            <small>a [dot] balasubramaniam [at] utwente [dot] nl</small> 
           </p>
           <br>
-          <br>
           <p>
-            Dennis Reidsma
-            <small>University of Twente, Netherlands</small> 
+            Dennis Reidsma <br>
+            <small>University of Twente, Netherlands</small> <br>
             <small>d [dot] reidsma [at] utwente [dot] nl</small>
           </p>
           <br>
-          <br>
           <p>
-            Mohammad Obaid
-            <small>Chalmers University of Technology, Sweden</small> 
+            Mohammad Obaid <br>
+            <small>Chalmers University of Technology, Sweden</small> <br>
             <small>mobaid [at] chalmers [dot] se</small>
           </p>
           <br>
-          <br>
           <p>
-            Aykut Coşkun
+            Aykut Coşkun <br>
             <small>Koç University, Turkey</small> 
           </p>
           <br>
-          <br>
           <p>
-            Dees Postma
-            <small>University of Twente, Netherlands</small> 
+            Dees Postma <br>
+            <small>University of Twente, Netherlands</small> <br>
             <small>d [dot] b [dot] w [dot] postma [at] utwente [dot] nl</small>
           </p>
         </div>
@@ -367,29 +363,6 @@
   </section>
 <!--End paper poster -->
 
-  <footer class="footer">
-  <div class="container">
-    <div class="columns is-centered">
-      <div class="column is-8">
-        <div class="content">
-
-          <p>
-            This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a> which was adopted from the <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
-            You are free to borrow the of this website, we just ask that you link back to this page in the footer. <br> This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
-            Commons Attribution-ShareAlike 4.0 International License</a>.
-          </p>
-
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
-
-<!-- Statcounter tracking code -->
-  
-<!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
-
-    <!-- End of Statcounter Code -->
 
   </body>
   </html>
