--- a/index.html
+++ b/index.html
@@ -318,35 +318,26 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Organizers</h2>
-        <div class="content has-text-justified">
-          <p>
+        <div style="text-align: center;   display: flex; justify-content: center;" class="content has-text-justified">
+          <p style="white-space: nowrap;">
             Aswin Balasubramaniam <br>
             <small>University of Twente, Netherlands</small> <br>
-            <small>a [dot] balasubramaniam [at] utwente [dot] nl</small> 
-          </p>
+            <small>a [dot] balasubramaniam [at] utwente [dot] nl</small> <br>
           <br>
-          <p>
             Dennis Reidsma <br>
             <small>University of Twente, Netherlands</small> <br>
-            <small>d [dot] reidsma [at] utwente [dot] nl</small>
-          </p>
+            <small>d [dot] reidsma [at] utwente [dot] nl</small><br>
           <br>
-          <p>
             Mohammad Obaid <br>
             <small>Chalmers University of Technology, Sweden</small> <br>
-            <small>mobaid [at] chalmers [dot] se</small>
-          </p>
-          <br>
-          <p>
+            <small>mobaid [at] chalmers [dot] se</small> <br>
+          <br>          
             Aykut Coşkun <br>
-            <small>Koç University, Turkey</small> 
-          </p>
+            <small>Koç University, Turkey</small> <br>
           <br>
-          <p>
             Dees Postma <br>
             <small>University of Twente, Netherlands</small> <br>
-            <small>d [dot] b [dot] w [dot] postma [at] utwente [dot] nl</small>
-          </p>
+            <small>d [dot] b [dot] w [dot] postma [at] utwente [dot] nl</small><br>
         </div>
       </div>
     </div>
