--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Template Download Links</h2>
         <div style="text-align: center;  display: flex; justify-content: center;" class="content has-text-justified">
-          <p style="white-space: nowrap;">
+          <p style="white-space: nowrap; text-align: center">
             <a style= "color: blue; text-align: center" href="authors.acm.org/proceedings/production-information/taps-production-workflow">Microsoft Word</a><br>
             <br>
             <a style= "color: blue" href="www.acm.org/binaries/content/assets/publications/consolidated-tex-template/acmart-primary.zip">LaTeX</a>: Use sample-manuscript.tex inside the samples folder for submissions <br> 
@@ -319,7 +319,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Organizers</h2>
         <div style="text-align: center;   display: flex; justify-content: center;" class="content has-text-justified">
-          <p style="white-space: nowrap;">
+          <p style="white-space: nowrap; text-align: center">
             Aswin Balasubramaniam <br>
             <small>University of Twente, Netherlands</small> <br>
             <small>a [dot] balasubramaniam [at] utwente [dot] nl</small> <br>
