--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <a href=" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
-                          <i class="fas fa-file-pdf"></i>
+                          <i class="fas fa-envelope"></i>
                         </span>
                         <span>Email Position Paper</span>
                       </a>
