--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">The 2nd International Workshop on Social Drones for Health, Well-Being, Sports, and Play</h1>
+            <h1 class="title is-1 publication-title">The 2<sup>nd</sup> International Workshop on Social Drones for Health, Well-Being, Sports, and Play</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
